改得我頭昏腦脹

--- a/Movies.plist
+++ b/Movies.plist
@@ -2,9 +2,9 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>「視覺與聽覺的聯合感知」</key>
+	<key>透視示意圖</key>
 	<array>
-		<string>空間裝置：藝術手工彩色玻璃迎賓</string>
+		<string>傳統剪紙的門箋</string>
 		<string>聲響裝置：客家山歌等傳統歌謠之［空間性重組］</string>
 	</array>
 </dict>
