還有平面圖縮放點擊還沒搞定

--- a/Ticket.plist
+++ b/Ticket.plist
@@ -4,8 +4,9 @@
 <dict>
 	<key>透視示意圖</key>
 	<array>
-		<string>傳統剪紙的門箋</string>
-		<string>春節門楣吉祥事務『門箋』</string>
+		<string>「牡丹花」和「油桐花」</string>
+		<string>垂直立面</string>
+		<string>漣漪呈現</string>
 	</array>
 </dict>
 </plist>
