--- a/Theater.plist
+++ b/Theater.plist
@@ -4,8 +4,11 @@
 <dict>
 	<key>透視示意圖</key>
 	<array>
-		<string>傳統剪紙的門箋</string>
-		<string>春節門楣吉祥事務『門箋』</string>
+		<string>「尊重自然」、「因地制宜」</string>
+		<string>春之花朵</string>
+		<string>夏之花朵</string>
+		<string>秋之花朵</string>
+		<string>冬之花朵</string>
 	</array>
 </dict>
 </plist>
