--- a/MultipleDetailViews-Info.plist
+++ b/MultipleDetailViews-Info.plist
@@ -5,11 +5,11 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleDisplayName</key>
-	<string>${PRODUCT_NAME}</string>
+	<string>客家文化園區</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
-	<string></string>
+	<string>HomeIcon.jpg</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.dac.maioli</string>
 	<key>CFBundleInfoDictionaryVersion</key>
