--- a/Movies.plist
+++ b/Movies.plist
@@ -2,7 +2,7 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>透視示意圖</key>
+	<key> 作品說明</key>
 	<array>
 		<string>傳統剪紙的門箋</string>
 		<string>春節門楣吉祥事務『門箋』</string>
