--- a/Theater.plist
+++ b/Theater.plist
@@ -2,9 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>透視示意圖</key>
+	<key> 作品說明</key>
 	<array>
-		<string>「尊重自然」、「因地制宜」</string>
+		<string>構成</string>
+		<string>與自然之關係（風與光）</string>
 		<string>春之花朵</string>
 		<string>夏之花朵</string>
 		<string>秋之花朵</string>
