--- a/Ticket.plist
+++ b/Ticket.plist
@@ -2,11 +2,11 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>透視示意圖</key>
+	<key> 作品說明</key>
 	<array>
 		<string>「牡丹花」和「油桐花」</string>
 		<string>垂直立面</string>
-		<string>漣漪呈現</string>
+		<string>透視示意圖</string>
 	</array>
 </dict>
 </plist>
