--- a/Movies.plist
+++ b/Movies.plist
@@ -4,8 +4,10 @@
 <dict>
 	<key> 作品說明</key>
 	<array>
-		<string>傳統剪紙的門箋</string>
-		<string>春節門楣吉祥事務『門箋』</string>
+		<string>作品鳥瞰圖</string>
+		<string>作品透視示意圖</string>
+		<string>玻璃部份</string>
+		<string>玻璃部份</string>
 	</array>
 </dict>
 </plist>
