--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 MultipleDetailViews.xcodeproj/project.xcworkspace/xcuserdata/amywah.xcuserdatad/UserInterfaceState.xcuserstate
 
 MultipleDetailViews.xcodeproj/project.xcworkspace/xcuserdata/amywah.xcuserdatad/UserInterfaceState.xcuserstate
+
+0_3 \346\213\267\350\262\235.html
+
+0_2 \346\213\267\350\262\235.html
