--- a/Movies.plist
+++ b/Movies.plist
@@ -4,10 +4,9 @@
 <dict>
 	<key> 作品說明</key>
 	<array>
-		<string>作品鳥瞰圖</string>
-		<string>作品透視示意圖</string>
-		<string>玻璃部份</string>
-		<string>玻璃部份</string>
+		<string>手工彩色玻璃</string>
+		<string>傳統客家山歌</string>
+		<string>透視示意圖</string>
 	</array>
 </dict>
 </plist>
