--- a/Movies.plist
+++ b/Movies.plist
@@ -7,6 +7,7 @@
 		<string>手工彩色玻璃</string>
 		<string>傳統客家山歌</string>
 		<string>透視示意圖</string>
+		<string>作品鳥瞰圖</string>
 	</array>
 </dict>
 </plist>
