加入觀賞指引,門揀圖修改, 改timer

--- a/Ticket.plist
+++ b/Ticket.plist
@@ -7,6 +7,7 @@
 		<string>「牡丹花」和「油桐花」</string>
 		<string>垂直立面</string>
 		<string>透視示意圖</string>
+		<string>觀賞指引</string>
 	</array>
 </dict>
 </plist>
