--- a/Movies.plist
+++ b/Movies.plist
@@ -8,6 +8,7 @@
 		<string>傳統客家山歌</string>
 		<string>透視示意圖</string>
 		<string>作品鳥瞰圖</string>
+		<string>觀賞指引</string>
 	</array>
 </dict>
 </plist>
